--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -18,22 +18,22 @@
 <script>
     const parent = document.querySelector('.parent')
     // console.log(parent);
-    // console.log(parent.children);
-    // console.log(parent.children[1].innerHTML);
+    // console.log(parent.children);//html collections
+    // console.log(parent.children[1].innerHTML); //Tuesday
 
     // for (let i = 0; i < parent.children.length; i++) {
-    //      console.log(parent.children[i].innerHTML);
+    //      console.log(parent.children[i].innerHTML);//Monday Tuesday Wednesday Thursday
         
     // }
-    parent.children[1].style.color = "orange"
-    // console.log(parent.firstElementChild);
-    // console.log(parent.lastElementChild);
+    parent.children[1].style.color = "orange" //color of Tuesday will change to orange
+    // console.log(parent.firstElementChild); //Monday
+    // console.log(parent.lastElementChild); //Thursday
 
-    const dayOne = document.querySelector('.day')
-    // console.log(dayOne);
-    // console.log(dayOne.parentElement);
-    // console.log(dayOne.nextElementSibling);
+    const dayOne = document.querySelector('.day') //1st day will be selected by day class
+    // console.log(dayOne); 
+    // console.log(dayOne.parentElement); //div 
+    // console.log(dayOne.nextElementSibling); //Tuesday
 
-    console.log("NODES: ", parent.childNodes);
+    console.log("NODES: ", parent.childNodes); //11 as all line breaks are also counted
 </script>
 </html>
