--- a/06_dom/three.html
+++ b/06_dom/three.html
@@ -10,6 +10,7 @@
     
 </body>
 <script>
+    //creation of div element; adding class,id ;setting attributes; giving style  
     const div = document.createElement('div')
     console.log(div);
     div.className = "main"
@@ -21,6 +22,6 @@
     const addText = document.createTextNode("Chai aur code")
     div.appendChild(addText)
 
-    document.body.appendChild(div)
+    document.body.appendChild(div) //utill we append div it will not be displayed in browser
 </script>
 </html>
